# Drop-Plus

./: .gitignore  README.md  Taskfile.yml  analysis_options.yaml  flutter_rust_bridge.yaml  package_rename_config.yaml  pubspec.yaml
android/: settings.gradle.kts
android/app/: build.gradle.kts
core/: Cargo.toml
core/src/: consts.rs  ffi.rs  frb_generated.rs  lib.rs  progress.rs  progresses.rs  types.rs  utils.rs
core/src/services/: mod.rs
core/src/services/others/: addrs.rs  mod.rs  qr.rs
core/src/services/receive/: mod.rs  utils.rs
core/src/services/send/: mod.rs  proto.rs  utils.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: exts.dart  global.dart  main.dart  utils.dart
lib/rust/: ffi.dart  frb_generated.dart  frb_generated.io.dart  progress.dart  progress.freezed.dart  progresses.dart  progresses.freezed.dart  types.dart  types.freezed.dart
lib/src/: app_theme.dart
lib/src/cubits/: receive_cubit.dart  send_cubit.dart  settings_cubit.dart  tracing_cubit.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: drop_plus_core.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: drop_plus_core.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+28 files in other folders)
